changed picture, minor rewording

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
 <body ALINK="red"> 
 <!--<body bgcolor=#00DED1 ALINK="red"> -->
 
+<div style="float: right"><IMG SRC="ben_wasatch.jpg" WIDTH=170 HEIGHT=278></div>
 
-<div style="float: right; clear: left;"><IMG SRC="ben_pic.jpg" WIDTH=201 HEIGHT=231></div>
+
 
 <title>Benjamin Dozier</title>
 
@@ -43,7 +44,7 @@
   In January 2019, I will start a postdoc as a Simons Instructor at Stony Brook University.  
 
   <br />
-    My research is in Teichmuller dynamics, and I have been advised by Maryam Mirzakhani and Alex Wright.  
+    My research is in Teichmuller theory, and I have been advised by Maryam Mirzakhani and Alex Wright.  
 </ul> 
 
 
