--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 
+
+
+
+
+
 <html>
 <head>
 </head>
@@ -6,13 +11,13 @@
 <body ALINK="red"> 
 <!--<body bgcolor=#00DED1 ALINK="red"> -->
 
-<div style="float: right"><IMG SRC="ben_wasatch.jpg" WIDTH=170 HEIGHT=278></div>
+
 
 
 
 <title>Benjamin Dozier</title>
 
-
+<div style="float: right"><IMG SRC="ben_wasatch.jpg" WIDTH=170 HEIGHT=278></div>
 
 
 <h2> Benjamin Dozier </h2> 
@@ -21,84 +26,12 @@
 
 
 <td>
-<dt> <b> Email:</b> benjamin.dozier@gmail.com</dt>
-<dt> <b>Office:</b> 426, Fields Institute, Toronto, Ontario</dt>
+<dt> <b> Email:</b> benjamin.dozier@stonybrook.edu</dt>
 
-
-
-</td>
-</tr>
-
-</table>
-
-
-
-<h3> About Me </h3> 
-
-<ul>
-  I've recently completed my PhD in mathematics at Stanford University.
-<br />
-  From July-December 2018, I will be postdoctoral fellow at the Fields Institute in Toronto for the thematic program on Teichmuller theory.
-
-  <br />
-  In January 2019, I will start a postdoc as a Simons Instructor at Stony Brook University.  
-
-  <br />
-    My research is in Teichmuller theory, and I have been advised by Maryam Mirzakhani and Alex Wright.  
-</ul> 
-
-
-
-
-
-<h3> Papers </h3> 
-
-<ul>
-<li><em><font size=+0>Equidistribution of saddle connections on translation surfaces, </font></em> Accepted to Journal of Modern Dynamics <b> [<a href="angle.pdf">pdf</a> | <a href="https://arxiv.org/abs/1705.10847">arxiv</a>] </b>
-
-  
-<a href="sc_equidist_slides.pdf">(Images illustrating the theorem) </a>
-
-  
-<p><ul><font size=+0><b>Abstract:</b>
-Fix a translation surface X, and consider the measures on X coming from averaging the uniform measures on all the saddle connections of length at most R.  Then as R goes to infinity, the weak limit of these measures exists and is equal to the Lebesgue measure on X.  We also  show that any weak limit of a subsequence of the counting measures on S^1 given by the angles of all saddle connections of length at most R_n, as R_n goes to infinity, is in the Lebesgue measure class.  The proof of the first result uses the second result, together with the result of Kerckhoff-Masur-Smillie that the directional flow on a surface is uniquely ergodic in almost every direction.  
-</ul></p></li>
-</ul>
-
-
-
-<ul>
-<li><em><font size=+0>Convergence of Siegel-Veech constants,</font></em> Geometriae Dedicata 2018 <b> [<a href="sv_convergence.pdf">pdf</a> | <a href="https://arxiv.org/abs/1701.00175">arxiv</a>] </b>
-
-<p><ul><font size=+0><b>Abstract:</b>
-We show that for any weakly convergent sequence of ergodic SL2(R)-invariant probability measures on a stratum of unit-area translation surfaces, the corresponding Siegel-Veech constants converge to the Siegel-Veech constant of the limit measure. Together with a measure equidistribution result due to Eskin-Mirzakhani-Mohammadi, this yields the (previously conjectured) convergence of sequences of Siegel-Veech constants associated to Teichmuller curves in genus two. 
-The proof uses a recurrence result closely related to techniques developed by Eskin-Masur. We also use this recurrence result to get an asymptotic quadratic upper bound, with a uniform constant depending only on the stratum, for the number of saddle connections of length at most R on a unit-area translation surface.
-</ul></p></li>
-</ul>
-
-
-
-
-<h3> Videos of Talks </h3> 
-
-<ul> <li> May 2018 talk on <a href="https://vimeo.com/281891913"> Equidistribution of saddle connections on translation surfaces</a>  at "The Mathematical Legacy of Maryam Mirzakhani" conference, Stanford </ul>
-
-<ul> <li> March 2018 talk on <a href="https://www.youtube.com/watch?v=ZG89T-zZZsw&frags=pl%2Cwn"> Convergence of Siegel-Veech constants</a> at "Teichmuller dynamics" conference, Warwick </ul>
-
-
-
-
-
-<hr WIDTH="100%"><font size=-1>
-  <p>
-   <!-- Last updated: August 2017 -->
-  </p>
-
+My website has moved <a href="https://www.math.stonybrook.edu/~bdozier"> here. </a>
 </div>
 
 
 
 </body>
 </html>
-
-
